Created calendar block, modified datepicker-block, subscription-field and text-field blocks

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -403,8 +403,8 @@ block content
           })
         .form-elements__datepicker 
           +datepicker-block({
+            isCalendarHidden: true,
             multipleFields: true,
-            initialDateRange: {start: "08.19.2019", end: "08.23.2019"},
             fields: {
               field1: {
                 label: "date-dropdown",
@@ -420,8 +420,8 @@ block content
             }
           })
           +datepicker-block({
+            isCalendarHidden: true,
             multipleFields: false,
-            initialDateRange: {start: "08.19.2019", end: "08.23.2019"},
             fields: {
               field1: {
                 label: "date filter dropdown",
