--- a/src/templates/components/subscription-field/subscription-field.pug
+++ b/src/templates/components/subscription-field/subscription-field.pug
@@ -1,5 +1,7 @@
 include ../text-field/text-field
-
+//-
+  action - path to the server, where form data will be posted
+  
 mixin subscription-field(options)
   if !options
     - options = {}
