--- a/src/templates/components/text-field/text-field.pug
+++ b/src/templates/components/text-field/text-field.pug
@@ -4,13 +4,15 @@
   btn - object with settings for field's button
     icon - buttons's icon
     color - button's color
-    btnType - buttons's type,
+    btnType - buttons's type
   isActive - deifnes, whether input active or not
   isEachBorderRounded - defines, whether each border rounded or not
   type - input's type
   name - input's name
   value - input's value
-  placegolder - input's placeholder
+  placeholder - input's placeholder
+    text - placceholder's text
+    isDark - defiens, whether placeholder text's color is dark or not
   isRequired - defines, whether text filed's input is required or not
   isDisabled - defines, whether text field's input diabled or not
   mask - defines the value of data-mask attribute
