--- a/src/templates/components/datepicker-block/_datepicker-block.scss
+++ b/src/templates/components/datepicker-block/_datepicker-block.scss
@@ -3,8 +3,8 @@
   max-width: 320px;
 
   &__container {
-    position: relative;
-    @include set-flex($crossAxis: center, $gap: 2rem);
+    // position: relative;
+    @include set-flex($crossAxis: center, $gap: 0 2rem, $flexWrap: wrap);
   }
 
   &__field {
@@ -15,189 +15,28 @@
     }
   }
 
-  &__service-field {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+  &__calendar {
+    position: relative;
+    top: 0.55rem;
     width: 100%;
-    visibility: hidden;
+    z-index: 1;
+    opacity: 1;
+    transition: all 0.5s;
+
+    &-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    &_hidden {
+      top: 0;
+      z-index: -1;
+      opacity: 0;
+    }
   }
 }
 
-.datepickers-container {
-  width: 100%;
-  max-width: 320px;
-}
-
-.datepicker {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 2rem;
-  box-shadow: 0 1rem 2rem $darkShade5;
-  @include set-border($borderColor: $darkShade25, $borderRadius: 0.4rem);
-
-  &--pointer {
-    display: none;
-  }
-
-  &--nav {
-    border-bottom: none;
-    padding: 0;
-    min-height: 0;
-    @include set-flex($crossAxis: center);
-    margin-bottom: 3rem;
-
-    &-action {
-      @include set-size(2.4rem);
-      @include flex-center();
-
-      &:hover {
-        background: none;
-      }
-    }
-    
-    &-button {
-      border: none;
-      background: none;
-      outline: none;
-      padding: 0;
-      @include set-font(2.4rem, 400, 2.4rem, $purple, "Material Icons", 'icons');
-      cursor: pointer;
-
-      &:hover, &:focus {
-        color: $darkShade50;
-      }
-    }
-
-    &-title {
-      @include subtitle-text();
-
-      &:hover {
-        background: none;
-      }
-    }
-  }
-
-
-  &--content {
-    box-sizing: border-box;
-    @include set-font(1.2rem, 400, 1.5rem, $darkShade50, "Montserrat");
-    padding: 0;
-    margin-bottom: 2rem;
-  }
-
-  &--days {
-    &-names {
-      margin: 0;
-    }
-  }
-
-  &--day {
-    &-name {
-      @include set-size(4rem);
-      font-weight: 700;
-      text-transform: capitalize;
-      color: $purple;
-    }
-  }
-
-  &--cells {
-    .-current- {
-      border: none;
-      background-image: $secondaryGradient;
-      border-radius: 50%;
-      font-weight: 700;
-      color: #fff;
-    }
-
-    .-other-month {
-      color: $darkShade25;
-    }
-
-    .-range-from- {
-      position: relative;
-
-      &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        @include set-size(50%, 100%);
-        background-image: $primaryGradient;
-        opacity: 0.25;
-        z-index: -1;
-      }
-    }
-
-    .-in-range- {
-      position: relative;
-      background: none;
-
-      &::before {
-        content: '';
-        position: absolute;
-        inset: 0;
-        background-image: $primaryGradient;
-        opacity: 0.25;
-      }
-    }
-
-    .-range-to- {
-      position: relative;
-
-      &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        @include set-size(50%, 100%);
-        background-image: $primaryGradient;
-        opacity: 0.25;
-        z-index: -1;
-      }
-    }
-
-    .-selected-, .-focus- {
-      background: none;
-      border: none;
-      background-image: $primaryGradient;
-      border-radius: 50%;
-      font-weight: 700;
-      color: #fff;
-    }
-
-    .-selected-.-focus- {
-      background: $primaryGradient;
-    }
-  }
-
-  &--cell {
-    &-day {
-      @include set-size(3.97rem, 4rem);
-    }
-  }
-
-  &--buttons {
-    font-family: 'Montserrat';
-    padding: 0;
-    border-top: none;
-    @include set-flex($mainAxis: space-between, $crossAxis: center, $gap: 1rem);
-  }
-
-  &--button{
-    flex: 0;
-    height: auto;
-
-    &:hover {
-      background: none;
-    }
-  }
-
-  &--main-button {
-    line-height: 1.5rem;
-  }
-}
 
 @import "../text-field/text-field";
-@import "../main-button/main-button";
-@import "air-datepicker/dist/css/datepicker.min.css";
+@import "../calendar/calendar";
