--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,7 @@ $secondaryGradient: linear-gradient(180deg, #6fcf97, #66d2ea 100%);
 $whiteGradient: linear-gradient(180deg, #fff, #fff);
 $purple: #bc9cff;
 $green: #6fcf97;
+$errorColor: #cc072b;
 $darkShade5: rgba(31, 32, 65, 0.05);
 $darkShade10: rgba(31, 32, 65, 0.1);
 $darkShade25: rgba(31, 32, 65, 0.25);
