--- a/src/templates/components/calendar/calendar.scss
+++ b/src/templates/components/calendar/calendar.scss
@@ -13,6 +13,13 @@
     margin-bottom: 2rem;
   }
 
+  &__error {
+    margin: 1rem;
+    text-align: center;
+    color: $errorColor;
+    font-weight: 700;
+  }
+
   &__buttons {
     @include set-flex($mainAxis: space-between, $crossAxis: center, $gap: 1rem);
   }
