--- a/src/templates/components/expandable-checkbox-list/_expandable-checkbox-list.scss
+++ b/src/templates/components/expandable-checkbox-list/_expandable-checkbox-list.scss
@@ -1,4 +1,5 @@
 .expandable-checkbox-list {
+  width: 100%;
   max-width: 266px;
   &__select {
     min-height: 4.4rem;
@@ -29,6 +30,9 @@
   &__content {
     @include flex-column($gap: 1rem);
     overflow: hidden;
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
     transition: height 0.5s;
   }
 }
