--- a/src/templates/components/range-slider/_range-slider.scss
+++ b/src/templates/components/range-slider/_range-slider.scss
@@ -1,9 +1,16 @@
 .range-slider {
+  width: 100%;
   max-width: 266px;
 
   &__header {
     @include set-flex($mainAxis: space-between, $crossAxis: center);
     margin-bottom: 2.35rem;
+  }
+
+  &__body {
+    position: relative;
+    display: inline-block;
+    width: 100%;
   }
 
   &__subtitle {
