Modified components, added scss mixin

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -86,7 +86,7 @@ block content
           +type-item({
             tag: "h3",
             descr: "this is a label or cta text",
-            uppercase: true
+            isDescrUppercase: true
           }) 
           +type-item({
             tag: "body",
@@ -251,7 +251,7 @@ block content
               count: "2",
               borderColor: "purple",
               iconColor: "gradient",
-              iconIsFilled: true,
+              isIconFilled: true,
               counterColor: "purple"
             })
             +like-button({
@@ -259,7 +259,7 @@ block content
               count: "12",
               borderColor: "purple",
               iconColor: "gradient",
-              iconIsFilled: true,
+              isIconFilled: true,
               counterColor: "purple"
             })
         .form-elements__feed 
@@ -273,7 +273,7 @@ block content
               count: "12",
               borderColor: "gradient",
               iconColor: "purple",
-              iconIsFilled: true,
+              isIconFilled: true,
               counterColor: "purple"
             }
           })
