--- a/src/templates/components/checkbox/_checkbox.scss
+++ b/src/templates/components/checkbox/_checkbox.scss
@@ -1,4 +1,5 @@
 .checkbox {
+  width: 100%;
   max-width: 260px;
   @include set-flex($gap: 1rem);
   cursor: pointer;
@@ -8,6 +9,7 @@
     flex-shrink: 0;
     margin: 0;
     appearance: none;
+    @include set-min-size(10px);
     @include set-size(2rem);
     @include set-border($borderColor: $darkShade25, $borderRadius: 0.4rem);
     transition: border-color 0.5s;
