--- a/src/templates/components/bullet-list/_bullet-list.scss
+++ b/src/templates/components/bullet-list/_bullet-list.scss
@@ -1,10 +1,10 @@
 .bullet-list {
+  width: 100%;
   max-width: 260px;
   &__wrapper {
     @include flex-column($gap: 1rem);
     list-style: none;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
     padding-left: 0;
   }
   
@@ -18,6 +18,7 @@
       position: absolute;
       top: 0.5em;
       left: 0;
+      @include set-min-size(5px);
       @include set-size(1rem);
       border-radius: 50%;
       background-color: $darkShade25;
