--- a/src/templates/components/feed/_feed.scss
+++ b/src/templates/components/feed/_feed.scss
@@ -1,4 +1,5 @@
 .feed {
+  width: 100%;
   max-width: 710px;
 
   &__top {
@@ -10,6 +11,7 @@
     @include set-size(100%);
 
     &-wrapper {
+      @include set-min-size(20px);
       @include set-size(4.8rem);
       @include set-border($borderWidth: 2px, $borderColor: #fff, $borderRadius: 50%);
     }
