--- a/src/templates/components/radio-button/radio-button.pug
+++ b/src/templates/components/radio-button/radio-button.pug
@@ -1,11 +1,13 @@
 //-
-  options.name - name attribute for radio's input
-  options.checked - defines, whether radio is checked or not
-  options.label - label for radio
+  name - name attribute for radio's input
+  checked - defines, whether radio is checked or not
+  label - label for radio
 
 mixin radio-button(options)
   if !options
     - options = {}
+
+  - const {label, name, checked} = options
 
   label.radio-button
     input.radio-button__input(type = "radio", name = options.name, checked = options.checked)
