--- a/src/templates/components/text-field/_text-field.scss
+++ b/src/templates/components/text-field/_text-field.scss
@@ -1,7 +1,7 @@
 .text-field {
-  @include flex-column();
   width: 100%;
   max-width: 320px;
+  @include flex-column();
   &__input {
     display: inline-block;
     padding: 1.3rem 1.5rem;
@@ -74,7 +74,7 @@
     background: none;
     @include set-size(4.4rem);
     @include flex-center();
-    @include set-font(2.4rem, 400, 2.4rem, $darkShade50, "Material Icons", 'icons');
+    @include set-font(clamp(15px, 2.4rem, 50px), 400, 2.4rem, $darkShade50, "Material Icons", 'icons');
     cursor: pointer;
     
     &:focues, &:active {
