--- a/src/templates/components/toggle/_toggle.scss
+++ b/src/templates/components/toggle/_toggle.scss
@@ -1,4 +1,5 @@
 .toggle {
+  width: 100%;
   max-width: 260px;
   @include set-flex($gap: 1rem);
   cursor: pointer;
@@ -8,6 +9,7 @@
     margin: 0;
     flex-shrink: 0;
     appearance: none;
+    @include set-min-size(30px, 15px);
     @include set-size(4rem, 2rem);
     @include set-border($borderColor: $darkShade25, $borderRadius: 1rem);
     transition: border-color 0.5s;
@@ -19,7 +21,7 @@
       top: 50%;
       left: 10%;
       transform: translateY(-50%);
-      @include set-size(1.2rem);
+      @include set-size(31%, 67%);
       background: $darkShade25;
       border-radius: 50%;
       transition: left 0.5s;
