--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,14 @@
-$primaryGradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-$primaryGradientSemiTransparent: linear-gradient(180deg, rgba(188, 156, 255, 0.5) 0%, rgba(139, 164, 249, 0.5) 100%);
-$secondaryGradient: linear-gradient(180deg, #6fcf97, #66d2ea 100%);
-$whiteGradient: linear-gradient(180deg, #fff, #fff);
-$purple: #bc9cff;
-$green: #6fcf97;
+$primaryGradient: linear-gradient(180deg, hsl(259, 100%, 81%) 0%, hsl(226, 90%, 76%) 100%);
+$primaryGradientSemiTransparent: linear-gradient(180deg, hsla(259, 100%, 81%, 0.5) 0%, hsla(226, 90%, 76%, 0.5) 100%);
+$secondaryGradient: linear-gradient(180deg, hsl(145, 50%, 62%), hsl(191, 76%, 66%) 100%);
+$whiteGradient: linear-gradient(180deg, hsl(0, 0%, 100%), hsl(0, 0%, 100%));
+$purple: hsl(259, 100%, 81%);
+$green: hsl(145, 50%, 62%);
 $errorColor: #cc072b;
-$darkShade5: rgba(31, 32, 65, 0.05);
-$darkShade10: rgba(31, 32, 65, 0.1);
-$darkShade25: rgba(31, 32, 65, 0.25);
-$darkShade50: rgba(31, 32, 65, 0.5);
-$darkShade75: rgba(31, 32, 65, 0.75);
-$darkShade100: #1f2041;
+$shadowColor: hsla(0, 0%, 0%, 0.2);
+$darkShade5: hsla(238, 35%, 19%, 0.05);
+$darkShade10: hsla(238, 35%, 19%, 0.1);
+$darkShade25: hsla(238, 35%, 19%, 0.25);
+$darkShade50: hsla(238, 35%, 19%, 0.5);
+$darkShade75: hsla(238, 35%, 19%, 0.75);
+$darkShade100: hsl(238, 35%, 19%);
