--- a/src/templates/components/radio-button/radio-button.pug
+++ b/src/templates/components/radio-button/radio-button.pug
@@ -7,8 +7,8 @@ mixin radio-button(options)
   if !options
     - options = {}
 
-  - const {label, name, checked} = options
+  - const {label, name, isChecked} = options
 
   label.radio-button
-    input.radio-button__input(type = "radio", name = options.name, checked = options.checked)
-    span.radio-button__label= options.label
+    input.radio-button__input(type = "radio", name = name, checked = isChecked)
+    span.radio-button__label= label
