--- a/src/templates/components/text-field/_text-field.scss
+++ b/src/templates/components/text-field/_text-field.scss
@@ -37,6 +37,12 @@
           color: $darkShade75;
         }
       }
+      &_with_uppercase {
+        &::placeholder {
+          text-transform: uppercase;
+        }
+      }
+
     }
 
     &_border{
