--- a/src/templates/components/main-button/_main-button.scss
+++ b/src/templates/components/main-button/_main-button.scss
@@ -3,6 +3,8 @@
   border: none;
   background: none;
   padding: 0;
+  width: 100%;
+  max-width: 99px;
   text-transform: uppercase;
   @include set-font(1.2rem, 700, 1.5rem, $darkShade100, inherit);
   cursor: pointer;
@@ -56,7 +58,6 @@
   }
 
   &_big{
-    width: 100%;
     max-width: 320px;
   }
 
