Created reservation-panel component

--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -229,3 +229,4 @@
 @import '../../templates/components/search-panel/search-panel';
 @import '../../templates/components/registration-panel/registration-panel';
 @import '../../templates/components/login-panel/login-panel';
+@import '../../templates/components/reservation-panel/reservation-panel';
