--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -34,6 +34,7 @@ block includes
   include ../../templates/components/search-panel/search-panel
   include ../../templates/components/registration-panel/registration-panel
   include ../../templates/components/login-panel/login-panel
+  include ../../templates/components/reservation-panel/reservation-panel
 
 block content
   section.colors-type
@@ -454,6 +455,25 @@ block content
             title: "регистрация аккаунта"
           })
         .cards__col
+          +reservation-panel({
+            action: "add/link/to/server",
+            room: {
+              id: "888", 
+              type: "люкс", 
+              currentPrice: 9990
+            }, 
+            dates: {
+              startDate: "08.19.2019", 
+              endDate: "08.23.2019"
+            }, 
+            dropdown: {
+              dropdownValue: "3 гостя", 
+              adultsCount: 3
+            },
+            serviceFee: 0,
+            sale: 2179,
+            additionalFee: 300
+          })
           +login-panel({
             action: "add/link/to/server",
             title: "войти"
