--- a/src/templates/components/reservation-panel/_reservation-panel.scss
+++ b/src/templates/components/reservation-panel/_reservation-panel.scss
@@ -7,14 +7,19 @@
   padding-top: 4rem;
 
   &__room {
-    margin-bottom: 2rem;
-    @include set-flex($mainAxis: space-between, $crossAxis: center, $gap: 1rem);
+    margin-bottom: 2.1rem;
+    @include set-flex($mainAxis: space-between, $crossAxis: flex-end, $gap: 1rem);
 
     &-info {
-      @include set-flex($gap: 0.5rem)
+      @include set-flex($crossAxis: flex-end, $gap: 0.8rem)
     }
     &-id {
       @include set-font(1.4rem, 700, 1.7rem, $darkShade100);
+
+      &-number {
+        font-size: 2.4rem;
+        line-height: 2.7rem;
+      }
     }
 
     &-type {
@@ -23,9 +28,10 @@
     }
 
     &-price {
-      @include set-font(1.4rem, 400, 1.8rem, $darkShade50);
+      @include set-font(1.2rem, 400, 1.8rem, $darkShade50);
 
       &-current {
+        font-size: 1.4rem;
         font-weight: 700;
       }
     }
@@ -37,12 +43,13 @@
 
   &__summary {
     margin-bottom: 3rem;
-    @include flex-column($gap: 1rem);
+    @include flex-column($gap: 1.5rem);
 
     &-item {
-      @include set-flex($mainAxis: space-between, $crossAxis: center, $gap: 1rem);
+      @include set-flex($mainAxis: space-between, $gap: 1rem);
+      line-height: 1.8rem;
 
-      &-text {
+      &-descr{
         @include set-flex($mainAxis: space-between, $gap: 0.5rem);
         width: 75%;
         max-width: 240px;
@@ -65,9 +72,9 @@
     @include subtitle-text();
 
     &-dots {
-      margin-left: 0.4rem;
+      margin: 0 0 0.5rem 0.4rem;
       width: 56%;
-      border-bottom: 1px dashed $darkShade25;
+      border-bottom: 1px dotted $darkShade25;
     }
   }
 }
