--- a/src/templates/components/reservation-panel/_reservation-panel.scss
+++ b/src/templates/components/reservation-panel/_reservation-panel.scss
@@ -30,7 +30,8 @@
     &-price {
       @include set-font(1.2rem, 400, 1.8rem, $darkShade50);
 
-      &-current {
+      &-wrapper {
+        display: inline-block;
         font-size: 1.4rem;
         font-weight: 700;
       }
@@ -59,6 +60,7 @@
     &-note {
       @include set-min-size(10px);
       @include set-size(2rem);
+      cursor: pointer;
 
       &-image {
         @include set-size(100%);
