--- a/src/templates/components/calendar/calendar.scss
+++ b/src/templates/components/calendar/calendar.scss
@@ -171,6 +171,10 @@
     .-selected-.-focus- {
       background: $primaryGradient;
     }
+
+    .-selected-.-other-month- {
+      background: $primaryGradient;
+    }
   }
 
   &--cell {
