--- a/src/templates/components/reservation-panel/reservation-panel.pug
+++ b/src/templates/components/reservation-panel/reservation-panel.pug
@@ -41,7 +41,7 @@ mixin reservation-panel(options)
       .reservation-panel__datepicker 
         +datepicker-block({
           isCalendarHidden: true,
-          multipleFields: true,
+          hasMultipleFields: true,
           fields: {
             field1: {
               label: "прибытие",
