--- a/src/templates/components/search-panel/search-panel.pug
+++ b/src/templates/components/search-panel/search-panel.pug
@@ -16,7 +16,7 @@ mixin search-panel(options)
       .search-panel__datepicker 
         +datepicker-block({
           isCalendarHidden: true,
-          multipleFields: true,
+          hasMultipleFields: true,
           fields: {
             field1: {
               label: "прибытие",
