--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -410,7 +410,7 @@ block content
         .form-elements__datepicker 
           +datepicker-block({
             isCalendarHidden: true,
-            multipleFields: true,
+            hasMultipleFields: true,
             fields: {
               field1: {
                 label: "date dropdown",
@@ -427,7 +427,7 @@ block content
           })
           +datepicker-block({
             isCalendarHidden: true,
-            multipleFields: false,
+            hasMultipleFields: false,
             fields: {
               field1: {
                 label: "date filter dropdown",
@@ -481,6 +481,14 @@ block content
             title: "войти"
           })
         .cards__col
+          +calendar({
+            renderCalendarDate: "08.08.2019",
+            currentDate: "08.08.2019",
+            initialSelectedDates: {
+              start: "08.19.2019",
+              end: "08.23.2019"
+            }
+          })
           +room-card({
             slider: {
               slides: [
