--- a/src/templates/components/calendar/calendar.pug
+++ b/src/templates/components/calendar/calendar.pug
@@ -4,7 +4,14 @@ mixin calendar(options)
   if !options
     - options = {}
 
-  .calendar()
+  - const {renderCalendarDate, currentDate, initialSelectedDates: {start, end} = {}} = options
+
+  .calendar(
+    data-render-date = renderCalendarDate,
+    data-current = currentDate, 
+    data-initial-start = start,
+    data-initial-end = end
+  )
     .calendar__container 
       .calendar__content
       .calendar__buttons
